# hash-o-matic

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  icon.png.license  org.kde.hashomatic.desktop  org.kde.hashomatic.metainfo.xml  org.kde.hashomatic.svg.license  org.kde.hashvalidator.desktop  org.kde.hashvalidator.json  org.kde.hashvalidator.metainfo.xml
autotests/: CMakeLists.txt  clipboardtest.cpp  controllertest.cpp  hashhelpertest.cpp  lorem.txt  lorem.txt.license
po/ar/: hashomatic.po
po/ast/: hashomatic.po
po/ca/: hashomatic.po
po/ca@valencia/: hashomatic.po
po/cs/: hashomatic.po
po/de/: hashomatic.po
po/en_GB/: hashomatic.po
po/eo/: hashomatic.po
po/es/: hashomatic.po
po/eu/: hashomatic.po
po/fr/: hashomatic.po
po/ga/: hashomatic.po
po/gl/: hashomatic.po
po/he/: hashomatic.po
po/hi/: hashomatic.po
po/ia/: hashomatic.po
po/it/: hashomatic.po
po/ja/: hashomatic.po
po/ka/: hashomatic.po
po/ko/: hashomatic.po
po/lt/: hashomatic.po
po/lv/: hashomatic.po
po/nl/: hashomatic.po
po/pa/: hashomatic.po
po/pl/: hashomatic.po
po/pt_BR/: hashomatic.po
po/ru/: hashomatic.po
po/sa/: hashomatic.po
po/sk/: hashomatic.po
po/sl/: hashomatic.po
po/sv/: hashomatic.po
po/tr/: hashomatic.po
po/ug/: hashomatic.po
po/uk/: hashomatic.po
po/zh_CN/: hashomatic.po
po/zh_TW/: hashomatic.po
src/: CMakeLists.txt  Messages.sh  clipboard.cpp  clipboard.h  controller.cpp  controller.h  hashFile.desktop  hashhelper.cpp  hashhelper.h  main.cpp  resources.qrc  urlhandler.cpp  urlhandler.h
src/contents/ui/: AboutPage.qml  ComparePage.qml  GeneratePage.qml  GlobalMenu.qml  VerifyPage.qml  WelcomePage.qml  main.qml
src/qml/: AboutKDEPage.qml  ComparePage.qml  GeneratePage.qml  GlobalMenu.qml  Main.qml  VerifyPage.qml
